# addressmonitor

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Pipfile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/wallet_watch/: __init__.py  cli.py  config.py  core.py  models.py
src/wallet_watch/chains/: __init__.py  base.py  solana.py
src/wallet_watch/notifiers/: __init__.py  base.py  telegram.py  webhook.py
src/wallet_watch/providers/: __init__.py
src/wallet_watch/storage/: __init__.py  base.py  sqlite.py
tests/: __init__.py  test_chains.py
